fixed first tutorial, fixed code snippets spacing

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -4,7 +4,7 @@ styles: true
 ---
 
 .highlight {
-	line-height: 60%;
+	line-height: 100%;
 }
 
 @import "alembic";
